--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,16 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "index.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-</head>
+{% block body %}
 
-<body>
-    <h1>Contact </h1>
-    <p>Telefon: 576 413 815"</p>
-    <p> <a href="{{ url_for('index') }}">Back to Home</a></p>
-</body>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div class="flash-message">{{ message }}</div>
+{% endfor %}
+{% endif %}
+{% endwith %}
 
-</html>
+<section class="text-center container">
+    <div class="row">
+        <div class="col-lg-6 col-md-8 mx-auto section-title">
+            <h1 class="fw-light">Contact</h1>
+        </div>
+    </div>
+</section>
+<div class="lead text-muted">Telefon: 576 413 815</div>
+<div class="lead text-muted">Email: kristinaa179@gmail.com</div>
+<br>
+<form action="{{ url_for('contact') }}" method=post>
+    <h4>Or contact us using form: </h4><br>
+    <div class="form-group row">
+        {{ form.name.label(class="col-sm-2 col-form-label") }}
+        <div class="col-sm-10">
+            {{ form.name(placeholder='Your name') }}
+        </div>
+    </div>
+    <div class="form-group row">
+        {{ form.email.label(class="col-sm-2 col-form-label") }}
+        <div class="col-sm-10">
+            {{ form.email(placeholder='Your e-mail ...') }}
+        </div>
+    </div>
+    <div class="form-group row">
+        {{ form.message.label(class="col-sm-2 col-form-label") }}
+        <div class="col-sm-10">
+            {{ form.message(placeholder='Type your message here ...') }}
+        </div>
+    </div>
+    <p>
+        {{ form.submit }}
+    </p>
+    </div>
+</form>
+
+
+{% endblock %}
