--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 
 <script>
-
+    $(document).ready(function () {
+        $('li.active').removeClass('active');
+        $('a[href="' + location.pathname + '"]').closest('li').addClass('active');
+    });
     // Open the Modal
     function openModal() {
         document.getElementById("myModal").style.display = "block";
