--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,31 +18,33 @@
     </div>
 </section>
 <div class="lead text-muted">Telefon: 576 413 815</div>
-<div class="lead text-muted">Email: kristinaa179@gmail.com</div>
+<div class="lead text-muted">Email: <a href="mailto:kristinaa179@gmail.com">kristinaa179@gmail.com</a></div>
 <br>
 <form action="{{ url_for('contact') }}" method=post>
     <h4>Or contact us using form: </h4><br>
     <div class="form-group row">
         {{ form.name.label(class="col-sm-2 col-form-label") }}
-        <div class="col-sm-10">
+        <div class="col-sm-4">
             {{ form.name(placeholder='Your name') }}
         </div>
     </div>
     <div class="form-group row">
         {{ form.email.label(class="col-sm-2 col-form-label") }}
-        <div class="col-sm-10">
+        <div class="col-sm-4">
             {{ form.email(placeholder='Your e-mail ...') }}
         </div>
     </div>
     <div class="form-group row">
         {{ form.message.label(class="col-sm-2 col-form-label") }}
-        <div class="col-sm-10">
+        <div class="col-sm-4">
             {{ form.message(placeholder='Type your message here ...') }}
         </div>
     </div>
-    <p>
-        {{ form.submit }}
-    </p>
+    <div class="form-group row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-4">
+            {{ form.submit }}
+        </div>
     </div>
 </form>
 
