--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('guestbook') }}">Guest Book</a>
+            </li>
         </ul>
     </div>
 </nav>
