edit comments, delete comments

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -5,7 +5,7 @@
 <section class="text-center container">
     <div class="col-lg-6 col-md-8 mx-auto section-title">
         <h1 class="fw-light">Gallery</h1>
-        <p class="lead text-muted">This is gallery of funny cats. Photos are duplicated. </p>
+        <p class="lead text-muted">This is gallery of funny cats. </p>
     </div>
 </section>
 
