--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -10,48 +10,72 @@
     </div>
 </section>
 
-<form action="{{ url_for('guestbook') }}" method=post>
-    <div class="row">
-        <div class="col-sm-6">
+
+<div class="row">
+    <div class="col-sm-6">
+        <form action="{{ url_for('guestbook') }}" method=post>
             <div class="card card-form">
                 <h4>Leave your message here: </h4><br>
                 <div class="form-group row">
                     {{ form.name.label(class="col-sm-4 col-form-label") }}
                     <div class="col-sm-8">
-                        {{ form.name(placeholder='Your name') }}
+                        {% if pre_data %}
+                            {{ form.id(type="hidden", value=pre_data.id) }}
+                            {{ form.name(placeholder='Your name', value=pre_data.name) }}
+                        {% else %}
+                            {{ form.name(placeholder='Your name') }}
+                        {% endif %}
                     </div>
                 </div>
                 <div class="form-group row">
                     {{ form.date.label(class="col-sm-4 col-form-label") }}
                     <div class="col-sm-8">
-                        <input type="datetime" value="{{ date }}" disabled>
+                        {% if pre_data %}
+                            <input type="datetime" value="{{ pre_data.date }}" disabled>
+                        {% else %}
+                            <input type="datetime" value="{{ date }}" disabled>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="form-group row">
                     {{ form.message.label(class="col-sm-4 col-form-label") }}
                     <div class="col-sm-8">
-                        {{ form.message(placeholder='Type your message here ...') }}
+                        {% if pre_data %}
+                            {{ form.message(placeholder='Type your message here ...', data=pre_data.message) }}
+                        {% else %}
+                            {{ form.message(placeholder='Type your message here ...') }}
+                        {% endif %}
                     </div>
                 </div>
                 <div class="form-group row">
                     {{ form.submit }}
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6">
-            {% for result in data %}
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">{{ result.nick }}</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">{{ result.date }}</h6>
-                    <p class="card-text">{{ result.message }}</p>
-                </div>
-            </div>
-            {% else %}
-            <p>Brak wpisów </p>
-            {% endfor %}
-        </div>
+        </form>
     </div>
-</form>
+
+    <div class="col-sm-6">
+        {% for result in data %}
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">{{ result.name }}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{ result.date }}</h6>
+                <p class="card-text">{{ result.message }}</p>
+
+                <form action="{{ url_for('delete', id=result.id) }}" method="POST">
+                    <button type="submit" class="btn btn-sm btn-danger float-right">Usuń</button>
+                </form>
+                <form action="{{ url_for('edit', id=result.id) }}" method="POST">
+                    <button type="submit" class="btn btn-sm">Edytuj</button>
+                </form>
+
+            </div>
+        </div>
+        {% else %}
+        <p>Brak wpisów </p>
+        {% endfor %}
+    </div>
+</div>
+
 
 {% endblock %}
